[project]
name = "crypto-payment-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asgiref>=3.8.1",
    "asyncpg>=0.30.0",
    "bip-utils>=2.9.3",
    "celery-types>=0.23.0",
    "celery[redis]>=5.5.2",
    "cryptography>=44.0.3",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
    "web3>=7.11.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.1",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --asyncio-mode=auto"
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]
